contrast fixed

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html{
 }
 
 body {
-    background-color: #BFB3AC;
+    background-color: #bfb3ac;
 }
 .wrapper{
     width: 70%;
@@ -48,7 +48,7 @@ nav li{
 nav a{
     font-size: 1.3rem;
     font-weight: 500;
-    color: #ffffff;
+    color: #692B2B;
 }
 
 nav li:first-child a{
@@ -124,7 +124,7 @@ nav li:first-child a{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 380px;
-    background-color: #e28b57;
+    background-color: #db9368;
     opacity: 0.9;
     border-radius: 7px;
     padding: 10px;
@@ -137,8 +137,9 @@ nav li:first-child a{
     
 }
 
-.skills-card h3{
-    color: #5f5651;
+.skills-card h3{   
+    font-size: 18.72px;
+    font-weight: bold;
 }
 .skills-card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
@@ -182,6 +183,7 @@ nav li:first-child a{
 .first-proj-text p{
     margin-top: 20px;
     width: 50%;
+    color: #373737;
 }
 .btn-proj-one button{
     background: #403C39;
@@ -309,10 +311,8 @@ nav li:first-child a{
   }
 
 .home-hello{
-    font-size: 10.0pt;
-    font-weight: normal;
     margin-left: 3px;
-    color:  #505050;
+    
 }
 
 .first-project{
@@ -329,11 +329,13 @@ nav li:first-child a{
     width: 100%;
 }
 .first-proj-img{
-    width: 320px;
-    height: 250px;
-    margin-left: -25%;
+    width: 300px;
+    height: 200px;
+    margin-left: -60px;
     margin-top:  20px;
     margin-bottom: -100PX;
+    margin-right: 15px;
+    
 }
 .first-proj-text p{
     margin-top: 20px; 
@@ -348,6 +350,11 @@ nav li:first-child a{
     line-height: 2rem;
     font-size: smaller;
     margin-right: 5px;
+}
+
+.skills-card {
+ width: 310px;
+ height: 200px;
 }
 
 }
